fix: fixed broken dependencies through npm audit fix, added justify styles, updated alignment in blocktune constructor

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@
 .ce-tune-alignment--left {
     text-align: left;
 }
+
+.ce-tune-alignment--justify {
+    text-align: justify;
+}
